# santorini-thesis

./: .gitignore  Cargo.toml  README.md
benches/: bench_4x4.rs  bench_5x5.rs  bench_5x5_struct.rs  bench_game_states.rs  my_benchmark.rs
src/: game_state.rs  generic_game_state.rs  lib.rs  main.rs  measurements.rs  minimax.rs  play_game.rs  precompute_state_winner.rs  stats.rs  strategy.rs
src/game_state/: binary_3bit_game_state.rs  binary_4bit_game_state.rs  game_state_4x4_binary_3bit.rs  game_state_4x4_binary_4bit.rs  game_state_4x4_struct.rs  game_state_5x5_5bit.rs  game_state_5x5_binary_128bit.rs  game_state_5x5_binary_composite.rs  game_state_5x5_struct.rs  game_state_tests.rs  generic_game_state.rs  utils.rs
src/game_state/utils/: child_evaluation.rs  generate_random_state.rs  (+5 more)
src/generic_game_state/: generic_4x4_game_state.rs  generic_santorini_game_state.rs
src/measurements/: create_csv_report.rs  measure_minimax.rs  minimax_measurement.rs  parallelize_measurements.rs
src/minimax/: minimax_cache.rs
src/precompute_state_winner/: asset_valid_bit_count.rs  bit_vector.rs  bit_writer.rs
src/stats/: benchmark_minimax_alpha_beta.rs  benchmark_minimax_cached.rs  benchmark_minimax_infinite.rs  benchmark_minimax_simple.rs  benchmark_minimax_sorted.rs  branching_factor_by_block_count.rs  formatters.rs  game_states_by_block_count.rs  minimax_solve_stats.rs  presolve_analysis.rs  utils.rs
src/strategy/: console_input_strategy.rs  dynamic_minimax_strategy.rs  heuristic_minimax_strategy.rs  heuristics.rs  minimax_strategy_4x4.rs  random_strategy.rs
(+5 files in other folders)
