[package]
name = "santorini-minimax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.40.0", features = ["full"] }
futures = "0.3.30"
async-recursion = "1.1.1"
anyhow = "1.0.89"
once_cell = "1.19.0"
rand = "0.9.0-alpha.2"
fnv = "1.0.7"
num-format = "0.4.4"
csv = "1.1"
chrono = "0.4.38"
plotters = "0.3.7"
serde = { version = "1.0.210", features = ["derive"] }
json5 = "0.4.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "bench_game_states"
harness = false